December 2022

  Add Hash and Encryption choices
  Add bzip3