@@ -1,3 +1,6 @@
+January 2023
+  Add Archive Comment option
+
 December 2022
 
   Add Hash and Encryption choices
